refactor: HeadRequestHandler & MethodNotAllowedHandler process /head_request